--- a/style/share.css
+++ b/style/share.css
@@ -303,6 +303,34 @@ button.danger:hover {
     padding-right: 20px;
     box-sizing: border-box;
     font-size: small;
+    pointer-events: none;
+}
+
+.status-bar .status-bar-left,
+.status-bar .status-bar-right {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.status-bar-item {
+    display: flex;
+    align-items: center;
+    background-color: var(--background-color);
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 999px;
+    height: 35px;
+}
+
+.status-bar-item label .icon {
+    font-size: medium;
+}
+
+.status-bar-item label {
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .sidebar.show+.main-wrapper {
