--- a/codemirror/addon/hint/show-hint.css
+++ b/codemirror/addon/hint/show-hint.css
@@ -9,7 +9,7 @@
 
   box-shadow: var(--shadow);
   border-radius: 10px;
-  border: 1px solid var(--border-light-color);
+  /* border: 1px solid var(--border-light-color); */
 
   background: var(--background-color-2);
   font-size: normal;
