--- a/style/share.css
+++ b/style/share.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 * {
     transition: 0.3s background-color, 0.3s color;
@@ -55,7 +55,7 @@ header.window-title .icon-button {
     font-size: x-large;
 }
 
-header.window-title input[type=text] {
+header.window-title input[type="text"] {
     background: transparent;
     padding: 0;
     border: none;
@@ -66,11 +66,11 @@ header.window-title input[type=text] {
     transition: background-color 0.3s;
 }
 
-header.window-title input[type=text]:hover {
+header.window-title input[type="text"]:hover {
     background-color: var(--hover-color);
 }
 
-header.window-title input[type=text]:focus {
+header.window-title input[type="text"]:focus {
     outline: 2px solid var(--highlight-color);
     background-color: var(--hover-color);
 }
@@ -180,18 +180,17 @@ button.danger:hover {
     background-color: var(--background-color);
 }
 
-
-@media screen and (max-width: 800px){
+@media screen and (max-width: 800px) {
     .hide-on-tablet {
         display: none;
     }
 
-    header.window-title input[type=text] {
+    header.window-title input[type="text"] {
         width: 90%;
     }
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 500px) {
     .hide-on-mobile {
         display: none;
     }
@@ -229,6 +228,7 @@ button.danger:hover {
     left: 0;
 }
 
+.context-menu .text-button,
 .dropdown-content .text-button {
     margin: 0 auto;
     color: var(--text-color);
@@ -247,6 +247,28 @@ button.danger:hover {
     outline: none;
 }
 
+.context-menu .icon-button {
+    margin: 0 auto;
+    color: var(--text-color);
+    border-radius: 5px;
+    padding: 8px;
+    height: 32px;
+    width: 32px;
+    text-align: left;
+    background: none;
+    border: none;
+    cursor: pointer;
+    align-items: center;
+    gap: 10px;
+    transition: none;
+    outline: none;
+    font-size: larger;
+}
+
+.context-menu .icon-button:focus,
+.context-menu .icon-button:hover,
+.context-menu .text-button:focus,
+.context-menu .text-button:hover,
 .dropdown-content .text-button:focus,
 .dropdown-content .text-button:hover {
     background-color: var(--hover-color);
@@ -256,6 +278,7 @@ button.danger:hover {
     display: block;
 }
 
+.context-menu .text-button kbd,
 .dropdown-content .text-button kbd {
     margin-left: auto;
     opacity: 0.6;
@@ -264,6 +287,7 @@ button.danger:hover {
     font-weight: 500;
 }
 
+.context-menu hr,
 .dropdown hr {
     border: 0;
     border-bottom: 1px solid var(--border-light-color);
@@ -271,8 +295,19 @@ button.danger:hover {
     width: 90%;
 }
 
+.context-menu {
+    position: absolute;
+    display: none;
+    background: var(--background-color-2);
+    box-shadow: var(--shadow);
+    z-index: 1000;
+    padding: 5px 0;
+    border-radius: 10px;
+    min-width: 120px;
+}
+
 @media screen and (max-width: 800px) {
-    .dropdown-content .text-button{
+    .dropdown-content .text-button {
         margin-top: 7px;
         margin-bottom: 7px;
     }
@@ -338,7 +373,7 @@ button.danger:hover {
     gap: 5px;
 }
 
-.sidebar.show+.main-wrapper {
+.sidebar.show + .main-wrapper {
     margin-left: 310px;
 }
 
@@ -347,7 +382,7 @@ button.danger:hover {
     width: 100%;
     height: 100%;
 }
-  
+
 .sidebar {
     transition: transform 0.3s ease;
     overflow: hidden;
@@ -370,7 +405,7 @@ button.danger:hover {
     transform: translateX(0%);
 }
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 800px) {
     .sidebar.show {
         width: calc(100vw - 10px);
         border-right: none;
@@ -402,7 +437,8 @@ button.danger:hover {
     background-color: var(--hover-color);
 }
 
-.sidebar .file h3, .sidebar .file p {
+.sidebar .file h3,
+.sidebar .file p {
     margin: 0;
     display: flex;
     align-items: center;
