--- a/style/share.css
+++ b/style/share.css
@@ -377,8 +377,8 @@ button.danger:hover {
     margin-left: 310px;
 }
 
-#editor,
-#preview {
+.editor,
+.preview {
     width: 100%;
     height: 100%;
 }
