--- a/style/editor.css
+++ b/style/editor.css
@@ -423,6 +423,19 @@
     object-fit: cover;
 }
 
+.preview dt::after {
+    content: " defines";
+    opacity: 50%;
+    font-style: italic;
+}
+
+.preview dd {
+    font-style: italic;
+    border-left: 1px solid var(--border-light-color);
+    margin-left: 20px;
+    padding-left: 20px;
+}
+
 /* custom html */
 
 .preview icon {
