added syntax highlight to HTML entities

--- a/script/codemirror/lib/codemirror.css
+++ b/script/codemirror/lib/codemirror.css
@@ -670,3 +670,7 @@ span.CodeMirror-selectedtext {
 .cm-mark-highlight {
     background-color: var(--quote-yellow-bg);
 }
+
+.cm-entitychar {
+    opacity: 50%;
+}
