--- a/style/editor.css
+++ b/style/editor.css
@@ -169,31 +169,57 @@
 
 /* images */
 
-.preview img {
-    border-radius: 10px;
-    max-width: calc(100% - 20px);
-}
-
 .preview .media-container {
-    display: contents;
+    position: relative;
+    display: inline-block;
 }
 
-.preview .media-container p {
-    text-align: center;
+.preview .media-container div {
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    color: white;
+    font-size: large;
     display: none;
-    margin: 5px;
-    opacity: 50%;
-    align-items: center;
-    gap: 5px;
+    opacity: 0%;
+    z-index: 2;
+    transition: opacity 1s;
+    max-width: 80%;
+    box-sizing: border-box;
+    text-shadow: 0px 0px 10px black;
 }
 
-.preview .media-container p::before {
-    content: "info";
-    font-family: 'Material Symbols Rounded';
+.preview .media-container div .alt,
+.preview .media-container div .url {
+    display: block;
 }
 
-.preview .media-container:hover p {
-    display: inline-flex;
+.preview .media-container div .url {
+    font-size: small;
+}
+
+.preview .media-container:hover div {
+    display: block;
+    opacity: 100%;
+}
+
+.preview .media-container img,
+.preview .media-container video {
+    display: block;
+    max-width: 100%;
+    border-radius: 10px;
+    transition: filter 0.3s;
+}
+
+.preview .media-container:hover img,
+.preview .media-container:hover video {
+    filter: brightness(.6);
+}
+
+.preview .media-container audio + div,
+.preview .media-container:hover audio + div {
+    display: none !important;
+    opacity: 0 !important;
 }
 
 /* links */
@@ -386,8 +412,8 @@
 }
 
 .preview video {
-    width: 100%;
     border-radius: 15px;
+    cursor: pointer;
 }
 
 .preview mark {
