added abbreviation escaping

--- a/style/editor.css
+++ b/style/editor.css
@@ -449,6 +449,11 @@
     object-fit: cover;
 }
 
+.preview dt {
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
 .preview dt::after {
     content: " defines";
     opacity: 50%;
