added better <details> support, added emoji hints

--- a/script/codemirror/addon/hint/show-hint.css
+++ b/script/codemirror/addon/hint/show-hint.css
@@ -31,6 +31,6 @@
 }
 
 li.CodeMirror-hint-active {
-  background: var(--highlight-color);
+  background: var(--field-color);
   color: var(--button-color-2);
 }
