--- a/style/palette.css
+++ b/style/palette.css
@@ -33,7 +33,7 @@
 
     --shadow:               0px 0px 10px #00000055;
     
-    --quote-purple:         #d781ff; 
+    --quote-purple:         #dd92ff; 
     --quote-blue:           #818eff;
     --quote-green:          #9aff81; 
     --quote-yellow:         #fff781;
