--- a/style/palette.css
+++ b/style/palette.css
@@ -172,7 +172,6 @@
     --quote-red-bg:         #ff6b6b33; 
 }
 
-
 .theme-epaper {
     --active-line:          #bbbbbb;
 
@@ -270,4 +269,88 @@
     --quote-green-bg:       #9aff8133; 
     --quote-yellow-bg:      #fff78133;
     --quote-red-bg:         #ff888133;
+}
+
+.theme-monokai {
+    --active-line:          #3e3d32;
+
+    --background-color:     #272822;
+    --background-color-2:   #2e2f27;
+    --background-color-3:   #3b3a32;
+
+    --field-color:          #49483e;
+
+    --border-dark-color:    #1e1f1c;
+    --border-light-color:   #75715e;
+    --border-field-color:   #75715e33;
+
+    --hover-color:          #383830;
+
+    --title-color:          #f8f8f2;
+    --button-color:         #f8f8f2;
+    --button-color-2:       #f8f8f2;
+    --text-color:           #f8f8f2;
+
+    --highlight-color:      #66d9ef;
+    --selection-color:      #49483e99;
+    --link-color:           #a6e22e;
+
+    --danger:               #f92672;
+    --danger-bg:            #f9267233;
+
+    --shadow:               0px 0px 10px #00000055;
+
+    --quote-purple:         #ae81ff;
+    --quote-blue:           #66d9ef;
+    --quote-green:          #a6e22e;
+    --quote-yellow:         #e6db74;
+    --quote-red:            #f92672;
+
+    --quote-purple-bg:      #ae81ff33;
+    --quote-blue-bg:        #66d9ef33;
+    --quote-green-bg:       #a6e22e33;
+    --quote-yellow-bg:      #e6db7433;
+    --quote-red-bg:         #f9267233;
+}
+
+.theme-nord {
+    --active-line:          #3b4252;
+
+    --background-color:     #2e3440;
+    --background-color-2:   #3b4252;
+    --background-color-3:   #434c5e;
+
+    --field-color:          #4c566a;
+
+    --border-dark-color:    #2e3440;
+    --border-light-color:   #d8dee9;
+    --border-field-color:   #d8dee933;
+
+    --hover-color:          #434c5e;
+
+    --title-color:          #eceff4;
+    --button-color:         #eceff4;
+    --button-color-2:       #e5e9f0;
+    --text-color:           #d8dee9;
+
+    --highlight-color:      #88c0d0;
+    --selection-color:      #88c0d044;
+    --link-color:           #8fbcbb;
+
+    --danger:               #bf616a;
+    --danger-bg:            #bf616a33;
+
+    --shadow:               0px 0px 10px #00000033;
+
+    --quote-purple:         #b48ead;
+    --quote-blue:           #81a1c1;
+    --quote-green:          #a3be8c;
+    --quote-yellow:         #ebcb8b;
+    --quote-red:            #bf616a;
+
+    --quote-purple-bg:      #b48ead33;
+    --quote-blue-bg:        #81a1c133;
+    --quote-green-bg:       #a3be8c33;
+    --quote-yellow-bg:      #ebcb8b33;
+    --quote-red-bg:         #bf616a33;
 }
